tests/compile/userdata_getter_and_meta.stderr
error: `meta` can only be combined with `field`
 --> tests/compile/userdata_getter_and_meta.rs:7:5
  |
7 |     fn bar(&self) -> mlua::Result<u32> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
